--- a/package.json
+++ b/package.json
@@ -1,51 +1,49 @@
 {
-    "name": "vite-template-solid",
+    "name": "supabase-solid-chat",
     "version": "0.0.0",
     "description": "",
     "scripts": {
         "start": "vite",
-        "dev": "vite",
+        "dev": "npm-run-all --parallel start typesafe-i18n",
         "build": "vite build",
         "type-check": "tsc --project tsconfig.json --pretty --noEmit",
         "lint": "prettier --check . --ignore-path .gitignore && eslint .",
         "format": "prettier --ignore-path .gitignore --write .",
         "format-check": "prettier -- --list-different",
-        "validate": "npm-run-all --parallel type-check lint build"
+        "validate": "npm-run-all --parallel type-check lint build",
+        "typesafe-i18n": "typesafe-i18n"
     },
     "license": "MIT",
     "devDependencies": {
-        "@iconify-json/heroicons-solid": "^1.0.1",
-        "@tailwindcss/aspect-ratio": "^0.2.1",
-        "@tailwindcss/forms": "^0.3.3",
         "@typescript-eslint/eslint-plugin": "^4.28.1",
         "@typescript-eslint/parser": "^4.28.1",
         "autoprefixer": "^10.2.6",
         "babel-preset-solid": "^1.0.0",
-        "daisyui": "^1.14.2",
         "eslint": "^7.30.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
-        "husky": "^7.0.0",
-        "lint-staged": "^11.0.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.3.5",
         "prettier": "^2.3.2",
-        "solid-meta": "^0.27.0",
         "solid-transition-group": "^0.0.8",
-        "tailwindcss": "^2.2.4",
         "typescript": "^4.3.5",
-        "unplugin-auto-import": "^0.4.12",
-        "unplugin-icons": "^0.12.15",
         "vite": "^2.3.8",
         "vite-plugin-solid": "^2.0.0"
     },
     "dependencies": {
+        "@felte/solid": "^1.2.3",
+        "@felte/validator-yup": "^1.0.9",
         "@fontsource/work-sans": "^4.5.1",
-        "@supabase/supabase-js": "^1.24.0",
-        "solid-app-router": "^0.0.50",
-        "solid-js": "^1.0.0"
+        "@hope-ui/solid": "^0.6.7",
+        "@solidjs/router": "^0.4.2",
+        "@supabase/supabase-js": "2.0.0-rc.3",
+        "solid-hcaptcha": "^0.2.5",
+        "solid-js": "^1.0.0",
+        "typesafe-i18n": "^5.12.0",
+        "yup": "^0.32.11"
     },
     "husky": {
         "hooks": {
