--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "description": "",
     "scripts": {
-        "start": "vite",
+        "start": "vite --port 6006",
         "dev": "npm-run-all --parallel start typesafe-i18n",
         "build": "vite build",
         "type-check": "tsc --project tsconfig.json --pretty --noEmit",
@@ -11,37 +11,40 @@
         "format": "prettier --ignore-path .gitignore --write .",
         "format-check": "prettier -- --list-different",
         "validate": "npm-run-all --parallel type-check lint build",
-        "typesafe-i18n": "typesafe-i18n"
+        "typesafe-i18n": "typesafe-i18n",
+        "cypress:open": "cypress open"
     },
     "license": "MIT",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.28.1",
-        "@typescript-eslint/parser": "^4.28.1",
-        "autoprefixer": "^10.2.6",
-        "babel-preset-solid": "^1.0.0",
-        "eslint": "^7.30.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
+        "@typescript-eslint/eslint-plugin": "^5.35.1",
+        "@typescript-eslint/parser": "^5.35.1",
+        "cypress": "^10.6.0",
+        "cypress-dark": "^1.8.3",
+        "cypress-vite": "^1.1.1",
+        "eslint": "^8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-cypress": "^2.12.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.3.2",
-        "solid-transition-group": "^0.0.8",
-        "typescript": "^4.3.5",
-        "vite": "^2.3.8",
-        "vite-plugin-solid": "^2.0.0"
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4",
+        "vite": "^3.0.9",
+        "vite-plugin-solid": "^2.3.0"
     },
     "dependencies": {
         "@felte/solid": "^1.2.3",
         "@felte/validator-yup": "^1.0.9",
-        "@fontsource/work-sans": "^4.5.1",
         "@hope-ui/solid": "^0.6.7",
         "@solidjs/router": "^0.4.2",
-        "@supabase/supabase-js": "2.0.0-rc.3",
+        "@stitches/core": "^1.2.8",
+        "@supabase/supabase-js": "^2.0.0-rc.6",
         "solid-hcaptcha": "^0.2.5",
-        "solid-js": "^1.0.0",
+        "solid-js": "^1.4.8",
+        "solid-transition-group": "^0.0.10",
         "typesafe-i18n": "^5.12.0",
         "yup": "^0.32.11"
     },
@@ -57,5 +60,6 @@
         "*.+(js|json|ts|tsx)": [
             "yarn run format"
         ]
-    }
+    },
+    "packageManager": "pnpm@7.9.5"
 }
