--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,27 @@
         "allowJs": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "lib": ["esnext", "dom"],
+        "lib": [
+            "esnext",
+            "dom"
+        ],
         "moduleResolution": "node",
-        "types": ["vite/client"],
+        "types": [
+            "vite/client"
+        ],
         "baseUrl": ".",
         "paths": {
-            "~/*": ["./src/*"]
+            "~/*": [
+                "./src/*"
+            ]
         }
     },
-    "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.tsx", "src/Routes.tsx"]
+    "include": [
+        "src/**/*.d.ts",
+        "src/**/*.js",
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "src/Routes.tsx",
+        "cypress/**/*.ts"
+    ]
 }
