--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,15 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "i18n-ally.pathMatcher": "{locale}/index.{ext}",
+    "i18n-ally.enabledParsers": [
+        "ts",
+        "js"
+    ],
+    "i18n-ally.keystyle": "nested",
+    "i18n-ally.localesPaths": [
+        "src/i18n"
+    ],
+    "i18n-ally.editor.preferEditor": true,
 }
