chore: init husky and commitlint
husky for git hooks and commitlint for use with conventional commits
https://www.conventionalcommits.org/en/v1.0.0/

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,8 @@
     },
     "files.eol": "\n",
     "i18n-ally.pathMatcher": "{locale}/index.{ext}",
-    "i18n-ally.enabledParsers": [
-        "ts",
-        "js"
-    ],
+    "i18n-ally.enabledParsers": ["ts", "js"],
     "i18n-ally.keystyle": "nested",
-    "i18n-ally.localesPaths": [
-        "src/i18n"
-    ],
-    "i18n-ally.editor.preferEditor": true,
+    "i18n-ally.localesPaths": ["src/i18n"],
+    "i18n-ally.editor.preferEditor": true
 }
