--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,16 +2,8 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "ESNext",
-        "lib": [
-            "esnext",
-            "dom"
-        ],
-        "types": [
-            "cypress",
-            "node"
-        ]
+        "lib": ["esnext", "dom"],
+        "types": ["cypress", "node"]
     },
-    "include": [
-        "**/*.ts"
-    ]
+    "include": ["**/*.ts"]
 }
