--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -1,11 +1,7 @@
 {
-    "plugins": [
-        "cypress"
-    ],
+    "plugins": ["cypress"],
     "env": {
         "cypress/globals": true
     },
-    "extends": [
-        "plugin:cypress/recommended"
-    ]
+    "extends": ["plugin:cypress/recommended"]
 }
