--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@commitlint/cli": "^17.1.1",
+        "@commitlint/config-conventional": "^17.1.0",
         "@typescript-eslint/eslint-plugin": "^5.35.1",
         "@typescript-eslint/parser": "^5.35.1",
         "cypress": "^10.6.0",
         "cypress-dark": "^1.8.3",
         "cypress-vite": "^1.1.1",
-        "eslint": "^8.22.0",
+        "eslint": "^8.23.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-cypress": "^2.12.1",
         "eslint-plugin-import": "^2.26.0",
@@ -31,7 +33,7 @@
         "lint-staged": "^13.0.3",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
-        "typescript": "^4.7.4",
+        "typescript": "^4.8.2",
         "vite": "^3.0.9",
         "vite-plugin-solid": "^2.3.0"
     },
@@ -43,22 +45,17 @@
         "@stitches/core": "^1.2.8",
         "@supabase/supabase-js": "^2.0.0-rc.6",
         "solid-hcaptcha": "^0.2.5",
-        "solid-js": "^1.4.8",
+        "solid-js": "^1.5.1",
         "solid-transition-group": "^0.0.10",
         "typesafe-i18n": "^5.12.0",
         "yup": "^0.32.11"
     },
-    "husky": {
-        "hooks": {
-            "pre-commit": "CI=1 npm-run-all --parallel type-check && lint-staged"
-        }
-    },
     "lint-staged": {
-        "*.+(js|ts|tsx)": [
-            "yarn run lint"
-        ],
         "*.+(js|json|ts|tsx)": [
-            "yarn run format"
+            "pnpm run format"
+        ],
+        "*.+(js|ts|tsx)": [
+            "pnpm run lint"
         ]
     },
     "packageManager": "pnpm@7.9.5"
