--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,25 @@
 dist
+worker
+.solid
+
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+*.launch
+.settings/
+
+# System Files
+.DS_Store
+Thumbs.db
+
+.env
+.env.local
+
+
 .vercel
+src/i18n/*.ts
+pnpm-lock.yaml
