--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
         "dev": "npm-run-all --parallel start typesafe-i18n",
         "build": "vite build",
         "type-check": "tsc --project tsconfig.json --pretty --noEmit",
-        "lint": "prettier --check . --ignore-path .gitignore && eslint .",
-        "format": "prettier --ignore-path .gitignore --write .",
+        "lint": "prettier --check . && eslint .",
+        "format": "prettier --write .",
         "format-check": "prettier -- --list-different",
         "validate": "npm-run-all --parallel type-check lint build",
         "typesafe-i18n": "typesafe-i18n",
-        "cypress:open": "cypress open"
+        "cypress:open": "cypress open",
+        "test": "vitest",
+        "coverage": "vitest --coverage"
     },
     "license": "MIT",
     "devDependencies": {
@@ -20,6 +22,7 @@
         "@commitlint/config-conventional": "17.1.0",
         "@typescript-eslint/eslint-plugin": "5.36.0",
         "@typescript-eslint/parser": "5.36.0",
+        "@vitest/ui": "^0.23.1",
         "cypress": "10.7.0",
         "cypress-dark": "1.8.3",
         "cypress-vite": "1.1.1",
@@ -35,12 +38,14 @@
         "prettier": "2.7.1",
         "typescript": "4.8.2",
         "vite": "3.0.9",
-        "vite-plugin-solid": "2.3.0"
+        "vite-plugin-solid": "2.3.0",
+        "vitest": "^0.23.1"
     },
     "dependencies": {
         "@felte/solid": "1.2.3",
         "@felte/validator-yup": "1.0.9",
         "@hope-ui/solid": "0.6.7",
+        "@radix-ui/colors": "^0.1.8",
         "@solidjs/router": "0.4.3",
         "@stitches/core": "1.2.8",
         "@supabase/supabase-js": "2.0.0-rc.8",
