--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
         "eslint-plugin-import": "2.26.0",
         "eslint-plugin-jsx-a11y": "6.6.1",
         "eslint-plugin-prettier": "4.2.1",
+        "eslint-plugin-simple-import-sort": "^8.0.0",
         "husky": "8.0.1",
+        "jsdom": "^20.0.0",
         "lint-staged": "13.0.3",
         "npm-run-all": "4.1.5",
         "prettier": "2.7.1",
+        "solid-testing-library": "^0.3.0",
         "typescript": "4.8.2",
         "vite": "3.0.9",
         "vite-plugin-solid": "2.3.0",
